# larkpy

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  pyproject.toml  setup.py
.claude/: design_improvement.md  docstring_rules.md  quick_guide.md  settings.local.json  update_summary.md
.github/workflows/: ci-cd.yml
.roo/rules-debug/: AGENTS.md
examples/: bitTable.py  bot.py  query_tasks.py  user_auth_example.py
larkpy/: __init__.py  api.py  bitTable.py  im.py
pylark/: __init__.py
src/larkpy/: __init__.py  api.py  auth.py  bot.py  browser.py  card.py  docx.py  im.py  task.py  token_manager.py  url_utils.py  utils.py  webhook.py
tests/: README.md  final_test.py  run_all_tests.py  simple_test.py  test_bot.py  test_card.py  test_card_elements.py  test_config.json.template  test_imports.py  test_integration.py  verify_basic.py
