[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "larkpy"
dynamic = ["version"]
authors = [
    {name = "Benature Wang", email = "benature246@gmail.com"},
]
description = "飞书开放平台 Python 接口 | Python SDK for Lark"
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3.7",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "bs4", 
    "lxml",
    "pandas",
    "requests_toolbelt"
]

[project.urls]
Homepage = "https://github.com/Benature/larkpy"
Repository = "https://github.com/Benature/larkpy"

[tool.setuptools.packages.find]
where = ["src"]
include = ["larkpy*"]

[tool.setuptools.dynamic]
version = {attr = "larkpy.__version__"}